# agent-harness

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  qa
api/: models.py  server.py  settings.py
data/: corpus.py  embed.py  memory_schema.sql  schema.sql  seed.py  sqlite.py
data/corpus/: account_recovery.md  escalation_paths.md  order_lifecycle.md  payments_and_refunds.md  returns_policy.md  shipping.md  tier_benefits.md  warranty.md
evals/: run.py  scenarios.yaml  scorers.py
harness/: config.py  grounding.py  loop.py  memory.py  router.py  state.py
memory/: __init__.py  store.py
providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
tests/: _cassette.py  conftest.py  test_anthropic.py  test_cassette.py  test_data_corpus.py  test_data_embed.py  test_data_seed.py  test_data_sqlite.py  test_harness_grounding.py  test_harness_loop.py  test_harness_memory.py  test_harness_router.py  test_harness_state.py  test_memory_store.py  test_ollama.py  test_openai.py  test_providers_base.py  test_providers_factory.py  test_tools_decorator.py  test_tools_integration.py  test_tools_invoke.py  test_tools_memory.py  test_tools_provider_bridge.py  test_tools_rag.py  test_tools_registry.py  test_tools_sql.py
tests/api/: conftest.py  test_chat.py
tests/cassettes/: anthropic_chat_error.json  anthropic_chat_plain.json  anthropic_chat_tool_call.json  ollama_chat_error.json  ollama_chat_plain.json  ollama_chat_tool_call.json  openai_chat_error.json  openai_chat_plain.json  openai_chat_tool_call.json
tests/evals/: test_run.py  test_scorers.py
tools/: __init__.py  base.py  decorator.py  memory.py  rag.py  registry.py  sql.py
